		Added the BLOXXMAS terrain tiles from the 1.06 patch.
	Red Alert:
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
		Fixed dinosaurs not being able to collect crates.
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
		Added support for rectangular cells with forced perspective.
		Added initial support for Tmp(TS) sprites.
		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
		Added support for crates to level up specific unit upgrades.
		Added a new Launch.Replay=$FILEPATH parameter for OpenRA.Game.exe to instantly start watching a *.rep file.
		Added HackyAI settings: ExcessPowerFactor, MinimumExcessPower, IdleBaseUnitsMaximum, RushAttackScanRadius, ProtectUnitScanRadius, RallyPointScanRadius. See the traits documentation for more information.
		Added HitAnimPalette trait for LaserZap projectiles. Laser hit animations can now specify individual palettes. Defaults to effect palette.
		Fixed performance issues with units pathing to naval transports.
		Fixed unit moving to transports that have moved.
	Server:
		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
	Asset Browser:
		Filenames are now listed in alphabetical order
	Map Editor: